<resources>
    <string name="app_name">ProyectoFinalCrespo</string>
    <string name="usuario_log">Usuario</string>
    <string name="contraseña_log">Contraseña</string>
    <string name="inicia">INGRESAR</string>
    <string name="regis">REGISTRATE</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="olvidoPassword">¿Olvidaste tu contraseña?</string>
    <string name="usuario_reg">Usuario</string>
    <string name="contraseña_reg">Contraseña</string>
    <string name="contraseñaRepe_reg">Repetir contraseña</string>
    <string name="btn_regis">CREAR CUENTA</string>
    <string name="titulo_registro">REGISTRO</string>
    <string name="btn_alumno">ALUMNO</string>
    <string name="btn_profesor">PROFESOR</string>
    <string name="btn_materia">MATERIAS</string>
    <string name="btn_nota">NOTAS</string>
    <string name="titulo_alumno">Alumnos</string>
    <string name="tituloAgregaAlumno">Nuevo Alumno</string>
    <string name="nombre_alumno">Nombre</string>
    <string name="apellido_alumno">Apellido</string>
    <string name="dni_alumno">DNI</string>
    <string name="domicilio_alumno">Domicilio</string>
    <string name="telefono_alumno">Telefono</string>
    <string name="btn_agregar">AGREGAR</string>
    <string name="tituloModificaAlumno">Alumno</string>
    <string name="busqueda">Buscar</string>
    <string name="titulo_profesor">Profesores</string>
    <string name="nombre_prof">Nombre</string>
    <string name="apellido_prof">Apellido</string>
    <string name="dni_prof">DNI</string>
    <string name="domicilio_prof">Domicilio</string>
    <string name="telefono_prof">Telefono</string>
    <string name="tituloAgregaProf">Nuevo Profesor</string>
    <string name="tituloModificaProfesor">Profesor</string>
    <string name="titulo_materia">Materias</string>
    <string name="tituloAgregaMateria">Nueva Materia</string>
    <string name="descripcion">Materia</string>
    <string name="cantHoras">Cantidad de horas</string>
    <string name="dniProfesor">Profesor</string>
    <string name="muestraNombreProf">Nombre Profesor</string>
    <string name="tituloModificaMateria">Materia</string>
    <string name="codigoMateria">Codigo</string>
    <string name="titulo_nota">Nota</string>
    <string name="tituloAgregaNota">Nueva Nota</string>
    <string name="nota">Nota</string>
    <string name="nombreMateria">Materia</string>
    <string name="alumnoDni">Alumno</string>
    <string name="tituloModificaNota">Nota</string>
    <string name="nombreAlumnoDni">Nombre Alumno</string>
    <string name="horas">Horas</string>
    <string name="nombreProfesor">Profesor</string>
    <string name="codigoCod">Codigo</string>
    <string name="notaString">Nota</string>
    <string name="codigoNota">Codigo</string>

</resources>
