<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#136595"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/apellido_alumno"
        android:layout_width="273dp"
        android:layout_height="42dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="344dp"
        android:fontFamily="@font/fragmentcore"
        android:hint="@string/usuario_log"
        android:inputType="text"
        android:textColor="#B5AFAC"
        android:textColorHighlight="#B5AFAC"
        android:textColorHint="#B5AFAC"

        android:textSize="20sp"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/contraseña_log"
        android:layout_width="273dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fragmentcore"
        android:hint="@string/contraseña_log"
        android:inputType="textPassword"
        android:textColor="#B5AFAC"
        android:textColorHighlight="#B5AFAC"
        android:textColorHint="#B5AFAC"
        android:textSize="20sp"
        android:theme="@style/AppTheme"

        app:layout_constraintBottom_toTopOf="@+id/inicia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido_alumno"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/inicia"
        android:layout_width="167dp"
        android:layout_height="42dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/fragmentcore"
        android:gravity="center"
        android:text="@string/inicia"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/olvidoPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/regis"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/fragmentcore"
        android:gravity="center"
        android:text="@string/regis"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/olvidoPassword"
        android:layout_width="273dp"
        android:layout_height="26dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/fragmentcore"
        android:gravity="center"
        android:text="@string/olvidoPassword"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/regis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fragmentcore"
        android:gravity="center"
        android:text="@string/bienvenida"
        android:textColor="@android:color/white"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/apellido_alumno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

</android.support.constraint.ConstraintLayout>