<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#71C3F3"
    tools:context=".Alumno.AgregarAlumno">

    <TextView
        android:id="@+id/tituloAgregaProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fragmentcore"
        android:gravity="center"
        android:text="@string/tituloAgregaProf"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/nombre_prof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <EditText
        android:id="@+id/nombre_prof"
        android:layout_width="273dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fragmentcore"

        android:hint="@string/nombre_prof"
        android:inputType="text"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="#B5AFAC"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toTopOf="@+id/apellido_prof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <EditText
        android:id="@+id/apellido_prof"
        android:layout_width="273dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/fragmentcore"
        android:hint="@string/apellido_prof"
        android:inputType="text"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="#B5AFAC"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toTopOf="@+id/dni_prof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dni_prof"
        android:layout_width="273dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/fragmentcore"
        android:hint="@string/dni_prof"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="#B5AFAC"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toTopOf="@+id/domicilio_prof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/domicilio_prof"
        android:layout_width="273dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/fragmentcore"
        android:hint="@string/domicilio_prof"
        android:inputType="text"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="#B5AFAC"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toTopOf="@+id/telefono_prof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/telefono_prof"
        android:layout_width="273dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="@font/fragmentcore"
        android:hint="@string/telefono_prof"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="#B5AFAC"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toTopOf="@+id/btn_agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="@font/fragmentcore"
        android:gravity="center"
        android:text="@string/btn_agregar"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/volver"
        android:layout_width="31dp"
        android:layout_height="21dp"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
        app:srcCompat="@drawable/volver" />




</android.support.constraint.ConstraintLayout>