<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#71C3F3"
    tools:context=".Materia.AgregarMateria">

    <TextView
        android:id="@+id/tituloAgregaMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fragmentcore"
        android:gravity="center"
        android:text="@string/tituloAgregaMateria"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/descrpcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descrpcion"
        android:layout_width="273dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fragmentcore"
        android:hint="@string/descripcion"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="#B5AFAC"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toTopOf="@+id/cantHoras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <EditText
        android:id="@+id/cantHoras"
        android:layout_width="273dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fragmentcore"
        android:hint="@string/cantHoras"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="#B5AFAC"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toTopOf="@+id/dniProf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

    <Spinner
        android:id="@+id/dniProf"
        android:layout_width="269dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <EditText
        android:id="@+id/muestraNombreProf"
        android:layout_width="273dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/fragmentcore"
        android:hint="@string/muestraNombreProf"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="#B5AFAC"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toTopOf="@+id/btn_agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dniProf"
        app:layout_constraintVertical_bias="0.329" />




    <TextView
        android:id="@+id/btn_agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fragmentcore"
        android:gravity="center"
        android:text="@string/btn_agregar"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />
</android.support.constraint.ConstraintLayout>